--- a/back-end/symptomfy.ipynb
+++ b/back-end/symptomfy.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Stress' 0.48705039448780235]\n ['Dysthymia' 0.015398200679225708]\n ['Anxiety disorder' 0.013071951337517972]\n ...\n ['Fracture' 8.497839377300559e-05]\n ['Bladder infection' 7.751075155723777e-05]\n ['Cellulitis' 5.9855165165687315e-05]]\n"
+      "[['Stress' 0.48705039448780235]\n ['Dysthymia' 0.015398200679225708]\n ['Anxiety disorder' 0.013071951337517972]\n ['Attention deficit hyperactivity disorder' 0.010133097468481605]\n ['Major depressive disorder' 0.00884728905556411]]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
     "combined = np.vstack((diaNames, cool_data)).T\n",
     "combined=combined[combined[:,1].argsort()]\n",
     "combined= np.flip(combined, axis=0)\n",
-    "print(combined)\n"
+    "print(combined[:5])\n"
    ]
   },
   {
